Aligned cards to right. Need to fix position.

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ h3
 .output {
     /*padding-right: 50px;*/
     float: right;
-    padding-right: 30px;
+    padding-right: 20px;
     padding-bottom: 1000px
 /*padding: 50px;*/
     /*float: left;*/
